# grill-chat

./: .mcp.json  CLAUDE.md  skills-lock.json
.wayfinder/: map.md
.wayfinder/assets/: 0002-ort-alignment.md  0003-model-stack.md  0007-cli-mcp-support.md
.wayfinder/tickets/: 0001-mcp-ask-contract.md  0002-transport-prototype.md  0003-model-stack-benchmark.md  0004-turn-detection-tuning.md  0005-voice-grill-skill.md  0006-codemode-surface-fallback.md  0007-cli-mcp-registration.md  0008-synthesize-spec.md
docs/agents/: domain.md  triage-labels.md
grill-mcp/: .gitignore  Cargo.toml
grill-mcp/src/: engine.rs  lib.rs  main.rs
